# lettersouppuzzle

./: .gitignore  Pipfile  configuration.py  main.py  myglob.py  pyproj.toml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: test.yml
modules/: __init__.py  errors.py  findword.py  modulesconfig.py  readData.py  test01.py
requirements/: install.py  test.py
scripts/: lint.sh
tests/: test_matrix.py  test_modules_readData.py
wxgui/: mainframe.py
